Cycles holdout depends on world transparency #99179

Closed
opened 2022-06-26 07:53:57 +02:00 by Max Edge · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.40

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
In cycles, enabling holdout on an object or using the holdout shader makes the surface transparent only if transparency for the world is enabled in the Render settings.
This is not the behavior in Eevee, where the holdout option is independent of the world's transparency.

The description for the transparency checkbox specifies the world. Cycles should follow Eevee's approach, since it's an overall more flexible workflow.
image.png
Cycles render, holdout object, no world transparency:
image.png
Cycles render, holdout object, world transparency:
image.png
Eevee render, holdout object, no world transparency:
image.png

Exact steps for others to reproduce the error
Check Holdout in an object's properties or use the Holdout shader when rendering an object in Cycles without world transparency being turned on.
TransparencyBugReportFile.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.40 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** In cycles, enabling holdout on an object or using the holdout shader makes the surface transparent only if transparency for the world is enabled in the Render settings. This is not the behavior in Eevee, where the holdout option is independent of the world's transparency. The description for the transparency checkbox specifies the world. Cycles should follow Eevee's approach, since it's an overall more flexible workflow. ![image.png](https://archive.blender.org/developer/F13230348/image.png) Cycles render, holdout object, no world transparency: ![image.png](https://archive.blender.org/developer/F13230369/image.png) Cycles render, holdout object, world transparency: ![image.png](https://archive.blender.org/developer/F13230367/image.png) Eevee render, holdout object, no world transparency: ![image.png](https://archive.blender.org/developer/F13230371/image.png) **Exact steps for others to reproduce the error** Check Holdout in an object's properties or use the Holdout shader when rendering an object in Cycles without world transparency being turned on. [TransparencyBugReportFile.blend](https://archive.blender.org/developer/F13230374/TransparencyBugReportFile.blend)
Author

Added subscriber: @Max-49

Added subscriber: @Max-49
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 43a124bc1c

This issue was referenced by 43a124bc1c4a2e096a6a81224fc318ac8f9180a4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-08-05 19:41:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99179
No description provided.