Fix T99179: holdout does not affect transparency without transparent background

This was by design, but maybe not so useful in practice. It's always possible to
set alpha to 1 in compositing if needed.